# cbitarray

./: CMakeLists.txt
bench/: CMakeLists.txt  bench-bitarray.c
include/: bitarray.h
src/: CMakeLists.txt  bitarray.c
test/: CMakeLists.txt  test-bitarray.c
